samples/_failures_safe/1761490862_fec841_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f825f697.c: In function ‘main’:
./samples/SAFE/__tmp_f825f697.c:160:10: error: ‘process’ undeclared (first use in this function); did you mean ‘processor’?
  160 |     if (!process
      |          ^~~~~~~
      |          processor
./samples/SAFE/__tmp_f825f697.c:160:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f825f697.c:160:17: error: expected ‘)’ at end of input
  160 |     if (!process
      |        ~        ^
      |                 )
./samples/SAFE/__tmp_f825f697.c:160:5: error: expected declaration or statement at end of input
  160 |     if (!process
      |     ^~
